--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,6 +47,6 @@ a {
   border-radius: 10px;
   padding: 15px;
   font-size: 1rem;
-  margin: 30px 0;
+  margin: 20px 0 10px 0;
   box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
